--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,7 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Testing */
-    "types": ["vitest/jsdom",  "jest"]
+    "types": ["jest", "vitest/globals"]
   },
-  "include": ["src"]
+  "include": ["src","./setupTests.ts"]
 }
